feat(databaseModel): add logic to add data to mongo db atlas

--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.96",
+    "@types/node": "^25.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
